tests/error/remainderInteger-wrong-1st-argument-bytestring.uplc
(program 1.0.0[[(builtin remainderInteger)(con bytestring #AFD3)](con integer 10)])